--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Hello and welcome! I'm Mahdi, an Assistant Professor at the University of Isfahan. I earned my Ph.D. in Computer Software Engineering from the University of Isfahan, under the guidance of Prof. Mohammad Ali Nematbakhsh and Dr. Afsaneh Fatemi at the BigData Laboratory. With over 10 years of experience, I have developed extensive expertise in data mining and artificial intelligence solutions across various fields, including online gaming, social networks, and industries like steel. Additionally, I am an indie video game developer skilled in using CryEngine and other game engines. I've successfully completed significant projects in these areas, particularly focusing on the behavioral and performance analysis of players in multiplayer online games for my master's and doctoral theses.</p>
+        <p>Hello and welcome! I'm Mahdi, an Assistant Professor in the Software Engineering Department at the University of Isfahan. I earned my Ph.D. in Computer Software Engineering from the University of Isfahan, under the guidance of Prof. Mohammad Ali Nematbakhsh and Dr. Afsaneh Fatemi at the BigData Laboratory. With over 10 years of experience, I have developed extensive expertise in data mining and artificial intelligence solutions across various fields, including online gaming, social networks, and industries like steel. Additionally, I am an indie video game developer skilled in using CryEngine and other game engines. I've successfully completed significant projects in these areas, particularly focusing on the behavioral and performance analysis of players in multiplayer online games for my master's and doctoral theses.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -150,7 +150,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Projects</h2>
-        <p>In this section, you can explore various projects that myself or my students have undertaken. The projects I have been involved in recent years have mainly focused on artificial intelligence, particularly in the fields of social networks and the steel industry. However, I also have over 13 years of experience in designing and developing video games, especially serious games, some of which I have included here. Additionally, among my guided projects, I have worked on various information retrieval systems with semantic search capabilities.</p>
+        <p>In this section, you can explore a range of projects that either I or my students have worked on. In recent years, my work has primarily concentrated on artificial intelligence, specifically within the realms of social networks, video games, and the steel industry. Additionally, I bring over 13 years of experience in designing and developing video games, particularly serious games. Some of these are included here alongside video games developed by my students as part of their course projects. Furthermore, I've undertaken projects involving various information retrieval systems with semantic search capabilities.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
