--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               </div>
             </div>
             <p class="py-3">
-			You can find more details about my academic publications on my Google Scholar and ResearchGate profiles, and you can follow my LinkedIn page for updates on my other activities.
+			Detailed information regarding my publications can be found on Google Scholar (latest articles) and ResearchGate (overall research activities). My ORCID profile provides a record of my peer reviews for scientific journals and editorial contributions. You may connect via my professional profile on LinkedIn or consult my University of Isfahan Weekly Schedule. I am currently open to inquiries regarding new Projects.
             </p>
           </div>
         </div>
