--- a/index.html
+++ b/index.html
@@ -145,6 +145,138 @@
 
 
 
+<!-- News Section -->
+<section id="news" class="news section">
+
+ <!-- Section Title -->
+ <div class="container section-title" data-aos="fade-up">
+ <h2>News</h2>
+ <p>Stay updated with the latest happenings and announcements.</p>
+ </div><!-- End Section Title -->
+
+ <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+ <div class="swiper init-swiper">
+ <script type="application/json" class="swiper-config">
+ {
+ "loop": true,
+ "speed": 600,
+ "autoplay": {
+ "delay": 5000
+ },
+ "slidesPerView": "auto",
+ "pagination": {
+ "el": ".swiper-pagination",
+ "type": "bullets",
+ "clickable": true
+ }
+ }
+ </script>
+ <div class="swiper-wrapper">
+ 
+ <div class="swiper-slide">
+  <div class="news-item">
+    <div class="row gy-4 justify-content-center align-items-center">
+      <div class="col-lg-7">
+        <div class="news-content">
+          <h3><a href="https://jcomsec.ui.ac.ir" target="_blank">Call for Papers: Special Issue on Large Language Models</a></h3>
+          <p>
+            The Journal of Computing and Security invites submissions for a special issue on "Large Language Models and Their Applications." This issue will explore the latest advancements, challenges, and future directions of LLMs. We welcome original research articles and reviews.
+          </p>
+          <div class="news-meta">
+            <p><strong>Submission Deadline:</strong> 30 August 2025</p>
+            <p><strong>Initial Decision Notification:</strong> 30 October 2025</p>
+          </div>
+
+          <!-- Guest Editors Section -->
+          <div class="guest-editors" style="margin-top: 15px;">
+            <p><strong>Guest Editors:</strong></p>
+            <ul style="list-style: none; padding: 0; margin: 0;">
+              <li>Dr. Mohammad Ali Nematbakhsh (Full Professor, University of Isfahan)</li>
+              <li>Dr. Mohammad Mahdi Rezapour (Assistant Professor, University of Isfahan)</li>
+            </ul>
+          </div>
+          <!-- End Guest Editors Section -->
+
+          <a href="https://jcomsec.ui.ac.ir" class="read-more" target="_blank">Learn More</a>
+        </div>
+      </div>
+      <div class="col-lg-5 text-center">
+        <!-- Make sure to replace this path with the actual path to your image -->
+        <img src="assets/img/News/JCS_SpecialIssueLLM_.jpg" class="img-fluid news-img" alt="Call for Papers: Special Issue on Large Language Models">
+      </div>
+    </div>
+  </div>
+</div><!-- End news item -->
+
+<div class="swiper-slide">
+  <div class="news-item">
+    <div class="row gy-4 justify-content-center align-items-center">
+      <div class="col-lg-7">
+        <div class="news-content">
+          <h3><a href="#">New Graduate Course Offering: Deep Learning</a></h3>
+          <p>
+            For the upcoming Spring semester, I will be instructing a "Deep Learning" course for graduate students (Master's and PhD) in the Computer Engineering Department. The curriculum will have a significant focus on the fields of Generative AI and Large Language Models (LLMs).
+          </p>
+          
+          <!-- Key Textbooks Section -->
+          <div class="key-textbooks" style="margin-top: 15px;">
+            <p><strong>Key Textbooks:</strong></p>
+            <ul style="padding-left: 20px; margin-bottom: 15px;">
+              <li><em>Understanding Deep Learning</em> by S. J. Prince (2024)</li>
+              <li><em>Deep Learning for Beginners</em> by P. Rivas (2020)</li>
+              <li><em>Build a Large Language Model (From Scratch)</em> by S. Raschka (2024)</li>
+            </ul>
+          </div>
+          <!-- End Key Textbooks Section -->
+
+          <a href="#" class="read-more">View Course Details</a>
+        </div>
+      </div>
+      <div class="col-lg-5 text-center">
+        <!-- Please replace this placeholder with a relevant course image -->
+        <img src="assets/img/news/deep-learning-course.jpg" class="img-fluid news-img" alt="Deep Learning Course Announcement">
+      </div>
+    </div>
+  </div>
+</div><!-- End news item -->
+
+<div class="swiper-slide">
+  <div class="news-item">
+    <div class="row gy-4 justify-content-center align-items-center">
+      <div class="col-lg-7">
+        <div class="news-content">
+          <h3><a href="https://mm-rezapour.github.io/" target="_blank">Research Meeting: Innovative Research Areas in Computer Games</a></h3>
+          <p>
+            Announcing a scientific meeting for Research Week on the topic of "Innovative Research Areas in Computer Games," presented by Dr. Mohammad Mahdi Rezapour, a faculty member of the Software Engineering group at the University of Isfahan.
+          </p>
+          <div class="news-meta">
+            <p><strong>Speaker:</strong> Dr. Mohammad Mahdi Rezapour</p>
+            <p><strong>Date:</strong> Tuesday, 27 Azar (December 18)</p>
+            <p><strong>Time:</strong> 11:00 AM</p>
+            <p><strong>Location:</strong> University of Isfahan, 3rd Floor, Computer Engineering Faculty, Video Conference Hall</p>
+          </div>
+          <a href="mailto:mm.rezapour@ec.iut.ac.ir" class="read-more">Contact for Info</a>
+        </div>
+      </div>
+      <div class="col-lg-5 text-center">
+        <!-- Make sure to replace this path with the actual path to your image -->
+        <img src="assets/img/news/research-meeting-games.jpg" class="img-fluid news-img02" alt="Innovative Research Areas in Computer Games Meeting">
+      </div>
+    </div>
+  </div>
+</div><!-- End news item -->
+ 
+ </div>
+ <div class="swiper-pagination"></div>
+ </div>
+
+ </div>
+
+</section><!-- /News Section -->
+
+
+
     <!-- Resume Section -->
     <section id="resume" class="resume section">
 
