--- a/index-fa.html
+++ b/index-fa.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>دکتر محمد مهدی رضاپور | استادیار مهندسی نرم‌افزار - متخصص هوش مصنوعی و بازی‌سازی</title>
+  <title>محمد مهدی رضاپور | استادیار مهندسی نرم‌افزار - متخصص هوش مصنوعی و بازی‌سازی</title>
   <meta name="description" content="وب‌سایت شخصی دکتر محمد مهدی رضاپور، استادیار دانشکده مهندسی کامپیوتر دانشگاه اصفهان. پژوهشگر در زمینه هوش مصنوعی، مدل‌های زبانی بزرگ، داده‌کاوی و بازی‌های جدی.">
   <meta name="keywords" content="محمد مهدی رضاپور, دانشگاه اصفهان, هوش مصنوعی, یادگیری عمیق, بازی سازی, داده کاوی, بازی های جدی, مهندسی کامپیوتر">
   <meta name="author" content="محمد مهدی رضاپور">
 
   <!-- Language Mapping -->
-  <link rel="alternate" hreflang="en" href="https://your-website-url.com/index.html" />
-  <link rel="alternate" hreflang="fa" href="https://your-website-url.com/index-fa.html" />
+  <link rel="alternate" hreflang="en" href="https://mm-rezapour.github.io/index.html" />
+  <link rel="alternate" hreflang="fa" href="https://mm-rezapour.github.io/index-fa.html" />
 
-  <meta property="og:title" content="دکتر محمد مهدی رضاپور | استادیار دانشگاه اصفهان">
+  <meta property="og:title" content="محمد مهدی رضاپور | استادیار دانشگاه اصفهان">
   <meta property="og:description" content="عضو هیئت علمی دانشگاه اصفهان، متخصص هوش مصنوعی و توسعه بازی‌های رایانه‌ای.">
   <meta property="og:image" content="assets/img/profile-img.jpg">
   <meta property="og:type" content="profile">
@@ -66,7 +66,9 @@
       "https://www.linkedin.com/in/mmrezapour/",
       "https://x.com/mm_rezapour",
       "https://orcid.org/0000-0002-4233-2412",
-      "https://www.researchgate.net/profile/Mohammad-Mahdi-Rezapour"
+      "https://www.researchgate.net/profile/Mohammad-Mahdi-Rezapour",
+	  "https://civilica.com/p/461533/",
+      "https://elmnet.ir/eid/a-0077-9880"
     ],
     "knowsAbout": ["هوش مصنوعی", "بازی‌سازی", "داده‌کاوی", "مدل‌های زبانی بزرگ", "یادگیری عمیق", "بازی‌های جدی"]
   }
