--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Dr. Mohammad Mahdi Rezapour | Assistant Professor of Software Engineering - AI & Game Dev</title>
+  <title>Mohammad Mahdi Rezapour | Assistant Professor of Software Engineering - AI & Game Dev</title>
   
   <!-- SEO Meta Tags -->
   <meta name="description" content="Mohammad Mahdi Rezapour is an Assistant Professor at the University of Isfahan. Specializing in Artificial Intelligence, Large Language Models (LLMs), Data Mining, and Serious Games. View research, publications, and portfolio.">
@@ -87,7 +87,9 @@
       "https://www.linkedin.com/in/mmrezapour/",
       "https://x.com/mm_rezapour",
       "https://orcid.org/0000-0002-4233-2412",
-      "https://www.researchgate.net/profile/Mohammad-Mahdi-Rezapour"
+      "https://www.researchgate.net/profile/Mohammad-Mahdi-Rezapour",
+	  "https://civilica.com/p/461533/",
+      "https://elmnet.ir/eid/a-0077-9880"
     ],
     "knowsAbout": ["Artificial Intelligence", "Game Development", "Data Mining", "Large Language Models", "Deep Learning"]
   }
