--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
     "knowsAbout": ["Artificial Intelligence", "Game Development", "Data Mining", "Large Language Models", "Deep Learning"]
   }
   </script>
-
+  
+  <meta name="google-site-verification" content="GCwC2otmxr8jnIvNI7hHfSlOAw_j91WPF83nbJy-FLo" />
+  
   <!-- =======================================================
   * Template Name: MyResume
   * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
