--- a/index-fa.html
+++ b/index-fa.html
@@ -45,6 +45,7 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "محمد مهدی رضاپور",
+	"alternateName": ["Mohammad Mahdi Rezapour", "Dr. Rezapour", "Mahdi Rezapour", "مهدی رضاپور", "محمدمهدی رضاپور", "رضاپور"],
     "jobTitle": "استادیار",
     "worksFor": {
       "@type": "EducationalOrganization",
@@ -58,7 +59,7 @@
       {
         "@type": "CollegeOrUniversity",
         "name": "دانشگاه صنعتی اصفهان"
-      },
+      }
     ],
     "url": "https://mm-rezapour.github.io/index-fa.html",
     "sameAs": [
