--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Mohammad Mahdi Rezapour",
+	"alternateName": [
+    "محمد مهدی رضاپور",
+    "محمدمهدی رضاپور",
+    "مهدی رضاپور",
+    "دکتر رضاپور",
+    "دکتر محمد مهدی رضاپور",
+    "Mahdi Rezapour",
+    "Rezapour",
+    "Dr Rezapour",
+    "M. M. Rezapour"
+    ],
     "jobTitle": "Assistant Professor",
     "worksFor": {
       "@type": "EducationalOrganization",
