--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Mohammad Mahdi Rezapour | Assistant Professor of Software Engineering - AI & Game Dev</title>
   
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Mohammad Mahdi Rezapour is an Assistant Professor at the University of Isfahan. Specializing in Artificial Intelligence, Large Language Models (LLMs), Data Mining, and Serious Games. View research, publications, and portfolio.">
-  <meta name="keywords" content="Mohammad Mahdi Rezapour, Assistant Professor, University of Isfahan, Artificial Intelligence, AI, Deep Learning, Game Development, Serious Games, Data Mining, Computer Engineering">
+  <meta name="description" content="Mohammad Mahdi Rezapour (Persian: محمد مهدی رضاپور) is an Assistant Professor at the University of Isfahan. Specializing in Artificial Intelligence, Large Language Models (LLMs), Data Mining, and Serious Games. View research, publications, and portfolio.">
+  <meta name="keywords" content="Mohammad Mahdi Rezapour, محمد مهدی رضاپور, Assistant Professor, University of Isfahan, Artificial Intelligence, AI, Deep Learning, Game Development, Serious Games, Data Mining, Computer Engineering">
   <meta name="author" content="Mohammad Mahdi Rezapour">
 
   <!-- Language Mapping (Crucial for dual-language sites) -->
@@ -171,7 +171,7 @@
       <div class="container section-title" data-aos="fade-up">
        <h2>About</h2>
 	  </div><!-- End Section Title -->
-		<p>Hello and welcome! I am Mohammad Mahdi Rezapour, an Assistant Professor at the Faculty of Computer Engineering, University of Isfahan. My academic path in computer engineering began with a Bachelor's degree from Malayer University (2014) and continued with a Master's from Isfahan University of Technology (2016) under the supervision of Dr. Maziar Palhang. I then completed my Ph.D. at the University of Isfahan, graduating with the first rank and publishing three papers in Q1 journals (including one in the top 1%), under the guidance of Prof. Mohammad Ali Nematbakhsh and Dr. Afsaneh Fatemi at the BigData Laboratory.</p>
+		<p>Hello and welcome! I am <strong>Mohammad Mahdi Rezapour (Persian: محمد مهدی رضاپور)</strong>, an Assistant Professor at the Faculty of Computer Engineering, University of Isfahan. My academic path in computer engineering began with a Bachelor's degree from Malayer University (2014) and continued with a Master's from Isfahan University of Technology (2016) under the supervision of Dr. Maziar Palhang. I then completed my Ph.D. at the University of Isfahan, graduating with the first rank and publishing three papers in Q1 journals (including one in the top 1%), under the guidance of Prof. Mohammad Ali Nematbakhsh and Dr. Afsaneh Fatemi at the BigData Laboratory.</p>
 
         <p>For over a decade, my professional focus has been on data mining and developing AI solutions; a path that encompasses a wide range of challenges, from analyzing online games and social networks to optimization in heavy industries like steel manufacturing. However, my world is not limited to the university; my passion for creating virtual worlds has led me to work as an indie game developer, utilizing tools like CryEngine to successfully execute several major projects.</p>
 
